`app upgrade` command added

--- a/setup.cfg
+++ b/setup.cfg
@@ -19,8 +19,8 @@ install_requires =
     pyyaml
     cookiecutter
     nagare-config
-    nagare-services
     nagare-commands-base
+    nagare-server
 
 [options.entry_points]
 nagare.commands =
@@ -28,6 +28,7 @@ nagare.commands =
 
 nagare.commands.app =
     create = nagare.admin.app_create:Create
+    upgrade = nagare.admin.app_create:Upgrade
 
 [bdist_wheel]
 universal = 1
