--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ license = { file = 'LICENSE.txt' }
 requires-python = '>=3.7'
 dependencies = [
     'pyyaml',
+    'python-slugify',
     'cookiecutter',
     'nagare-config',
     'nagare-commands-base',
@@ -37,7 +38,6 @@ dev = [
     'sphinx',
     'sphinx_rtd_theme',
     'pre-commit',
-    'black',
     'ruff',
     'pytest',
     'build',
@@ -91,6 +91,9 @@ convention = 'google'
 [tool.ruff.isort]
 known-third-party = ['nagare']
 force-sort-within-sections = true
+
+[tool.ruff.format]
+quote-style = 'single'
 
 [tool.pytest.ini_options]
 testpaths = ['tests']
