Fix `--force` option

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,7 +11,7 @@
 
 tests:
   script:
-    - pip3 install ruff black .
+    - pip3 install ruff .
+    - ruff format --check src
     - ruff src
-    - black src
 
