--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,7 +40,6 @@ dev = [
     'pre-commit',
     'ruff',
     'pytest',
-    'build',
     'twine',
 ]
 
@@ -72,20 +71,20 @@ select = [
     'W',
     'YTT',
 ]
-ignore = ['COM812', 'D10', 'S603']
+ignore = ['COM812', 'D10', 'S603', 'ISC001']
 line-length = 120
 src = ['src']
 
 [tool.ruff.flake8-quotes]
 inline-quotes = 'single'
-multiline-quotes = 'single'
+multiline-quotes = 'double'
 
 [tool.ruff.pydocstyle]
 convention = 'google'
 
 [tool.ruff.isort]
 known-third-party = ['nagare']
-force-sort-within-sections = true
+length-sort = true
 
 [tool.ruff.format]
 quote-style = 'single'
