--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,16 +9,11 @@ repos:
       - id: check-added-large-files
         args: ["--maxkb=400"]
 
-  - repo: https://github.com/astral-sh/ruff-pre-commit
-    # Ruff version.
-    rev: v0.1.11
-    hooks:
-      - id: ruff-format
-        args: [--check]
-
   - repo: https://github.com/charliermarsh/ruff-pre-commit
     # Ruff version.
-    rev: "v0.1.11"
+    rev: "v0.1.14"
     hooks:
       - id: ruff
+        files: "^src"
+      - id: ruff-format
         files: "^src"
